# BeSpider

./: .gitignore  BeSpider.rdef  CMakeLists.txt  Makefile  README.md  TODO  makefile
.github/workflows/: build.yaml
Artwork/: BeSpider_icon
Source/: BeSpider.rdef  BeSpiderWindow.cpp  BeSpiderWindow.h  CMakeLists.txt  KlondikeView.cpp  KlondikeView.h  KlondikeWindow.cpp  KlondikeWindow.h  SelectorWindow.cpp  SelectorWindow.h  Solitare.cpp  Solitare.h  SolitareView.cpp  SolitareView.h  Spider.cpp  Spider.h  SpiderApplication.cpp  SpiderApplication.h  SpiderView.cpp  SpiderView.h  SpiderWindow.cpp  SpiderWindow.h
locales/: en.catkeys  pl.catkeys
